# open-nucleotides

./: .dockerignore  .gitignore  CODEOWNERS  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  environment-production.yml  environment.yml  setup.cfg  setup.py
nucleotides/: __init__.py  __main__.py  settings.py
nucleotides/analyze/: explain.py  explain_by_permutation.py  explanations_for_region.py  mean_predictions.py  project_endpoints.py
nucleotides/api/: main.py  models.py  response_models.py
nucleotides/loss/: base_loss.py  class_balanced_loss.py  distribution_balanced_loss.py  loss.py  task_balanced_loss.py
nucleotides/metrics/: average_precision.py  confusion_matrix.py
nucleotides/model/: albert_model.py  lightning_model.py  pinkpanther.py  sampler.py  train.py  woodpecker.py
nucleotides/optimize_sequence/: genetic_torch.py  optimize.py  positive_and_negative_endpoints.py  sequence_similarity.py
nucleotides/predict/: accumulator.py  dataloader.py  evaluate_mc_dropout.py  inference_model.py  lookup_prediction.py  predict.py
nucleotides/resources/: clean_logs.py  preprocess_all.py  process_peaks.py  select_experiments.py  select_training_intervals.py  start_over.py  upload_to_deployed.py  util.py
nucleotides/util/: select_device.py  sequence_from_genome.py  show_hyperparameters.py  util.py
test/: test_data_availability.py
